# tsp_solver_backend

./: .gitignore  Dockerfile  Dockerfile_consumer  README.md  alembic.ini  docker-compose.yml  env.sample  main.py  pyproject.toml  settings.py
adapters/: ampq.py
api/: task.py
core/: dto.py  exceptions.py  utils.py
db/: engine.py  mixins.py  task.py
db/migrations/: env.py
db/migrations/versions/: 2024_04_01_2341_.py  2024_04_03_1401_initial.py
services/: consumer_service.py  task_service.py
